--- a/.github/workflows/generated-macos-arm64-binary-wheel-nightly.yml
+++ b/.github/workflows/generated-macos-arm64-binary-wheel-nightly.yml
@@ -4,7 +4,10 @@
 # Generation script: .github/scripts/generate_ci_workflows.py
 name: macos-arm64-binary-wheel
 
-on: {}
+on:
+# TODO: Migrate to new ciflow trigger, reference https://github.com/pytorch/pytorch/pull/70321
+  push: 
+  workflow_dispatch:
 
 env:
   # Needed for conda builds
